@@ -52,8 +52,9 @@ function doSearch() {
 }
 
 function applyConditions(){
-    var limit = IMLibLocalContext.getValue('pagedSize');
+    var limit = document.getElementById('number').value;
     if (parseInt(limit) > 0) {
+        INTERMediator.addRecordLimit('postalcode',limit);
         INTERMediator.pagedSize = limit;
     }
     var c1 = IMLibLocalContext.getValue('condition');
