@@ -28,7 +28,7 @@
         検索条件:
         <input type="text" id="condition" data-im="_@condition">
         表示件数：
-        <select type="text" id="number" data-im="_@pagedSize">
+        <select type="text" id="number">
             <option value="4">4</option>
             <option value="10">10</option>
             <option value="40">40</option>
