@@ -17,6 +17,8 @@ Ver.5.8-dev (in development)
 - Update FMDataAPI.php (Ver.7) for FileMaker Data API (Trial).
 - Add JSEncrypt <http://travistidwell.com/jsencrypt/> to "js_lib" directory in "lib" directory and
   remove "bi2php" from "lib" directory to improve speed performance of Native Authentication.
+- The INTERMediator.recordLimit property is introduced to store the number of records. Also added methods:
+  INTERMediator.setRecordLimit(cname, limit) and INTERMediator.clearRecordLimit(cname).
 - [INFO] Require a 2048-bit private key at least for authentication. Please update in case of using Native 
   Authentication or LDAP Authentication.
 - [BUG FIX] If the server doesn't have valid locale (ex. Windows Server), the number format with thousand
